# helios-home

./: .dockerignore  .gitignore  README.md  pyproject.toml
apps/edge-api/app/: __init__.py  main.py
apps/edge-api/app/actions/: __init__.py  schemas.py  service.py
apps/edge-api/app/agent/: __init__.py  configuration.py  provider.py  runtime.py  schemas.py  semantics.py  service.py
apps/edge-api/app/api/: __init__.py  routes.py
apps/edge-api/app/core/: __init__.py  config.py
apps/edge-api/app/db/: __init__.py  models.py  seed.py  session.py
apps/edge-api/app/domain/: __init__.py  enums.py  schemas.py
apps/edge-api/app/hems/: __init__.py  adapter_registry.py  bindings.py  dispatchability.py  dispatcher.py  forecast.py  load_control.py  materialization.py  models.py  planner.py  policy.py  (+4 more)
apps/edge-api/tests/: conftest.py  discovery_catalog.py  test_agent.py  test_api.py  test_candidate_reconciliation.py  test_eebus.py  test_explainability.py  test_hems.py  test_http_telemetry.py  test_knowledge.py  test_local_network.py  test_modbus.py  test_mqtt.py  test_network_broadcast.py  test_network_scope.py  test_targeted_probe.py  test_write_adapters.py
apps/web-ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/web-ui/src/: App.tsx  index.css
docs/api/: endpoints.md
docs/architecture/: discovery-core.md  hems-core.md  overview.md
infra/compose/: docker-compose.yml
infra/docker/: edge-api.Dockerfile  web-ui.Dockerfile
scripts/: build-frontend.sh  run-backend.sh  run-frontend.sh  run-local.sh  setup-backend.sh  test-backend.sh
(+50 files in other folders)
